--- a/HTML/DemoGIT.html
+++ b/HTML/DemoGIT.html
@@ -2,8 +2,8 @@
 <html>
     <head>
        <title>VŨ NGỌC TUYẾN</title>
-       <meta charset="utf-8">
+       
     </head>
-    <body> xin chào các bạn!
+    <body> xin chào các bạn! mình là Vũ ngọc tuyến
 MÃ SINH VIÊN 2021050715 </body>
 </html>
