--- a/HTML/DemoGIT.html
+++ b/HTML/DemoGIT.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <h1>Vũ NGỌC TUYẾN</h1>
+    <h2>2021050715</h2>
     <p>xin chao minh la vu ngoc tuyen.</p>
     <P>toi yeu humg</P>
+    <h1>Heading 1</h1>
+    <h2>hello i am tuyen</h2>
+    <h3>hai duong</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+
 </body>
 </html>
